be more consistent with return List.of vs Collections.emptyList